--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,19 +39,17 @@ services:
       clj-test:
 
   db:
-    image: postgres:12-alpine
+    build: env/docker/postgres
     container_name: clj-test-postgres
     environment:
-      POSTGRES_USER: dev 
+      POSTGRES_USER: dev
       POSTGRES_PASSWORD: dev
       POSTGRES_DB: dev
-    ports:                 
-      - 5432:5432          
-    volumes:               
+    ports:
+      - 5432:5432
+    volumes:
       - db-data:/var/lib/postgresql/data
-      - ./log/postgres:/log/postgresql
-      - ./env/docker/postgres/postgresql.conf:/etc/postgresql/postgresql.conf:ro
-    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
+      - ./log/postgres:/var/log/postgresql
     networks:
       clj-test:
 
