--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,10 @@ services:
     container_name: clj-test-front-app
     working_dir: /usr/src/app
     volumes:
-        - ./front:/usr/src/app
+      - ./front/app:/usr/src/app
     command: "lein figwheel"
+    ports:
+      - 7002:7002
     networks:
       clj-test:
 
